--- a/css/styles.css
+++ b/css/styles.css
@@ -66,10 +66,6 @@ input[type=submit].correct {
   background-color: var(--color-win);
 }
 
-.correct{
-  background: red;
-}
-
 #btn__reset {
 	width: 200px;
 	margin: 0 auto;
@@ -171,6 +167,13 @@ input[type=submit].correct {
   border-right: solid 3px rgba(0, 0, 0, 0);
 }
 
+.correct{
+  background-color: #78CF82;
+}
+
+.incorrect{
+  background-color: lightcoral;
+}
 
 /* Overlay */
 
