--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,11 @@ body {
   flex-direction: column;
   display: flex;
   height: 100vh;
+  background: #000000;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #e74c3c, #000000);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #e74c3c, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 }
 
 li, ol, ul {
@@ -93,7 +98,7 @@ input[type=submit].correct {
 /* Title */
 
 .header {
-  color: #3a3f58;
+  color: white;
 }
 
 .index-header{
@@ -140,6 +145,14 @@ input[type=submit].correct {
 .keyrow {
   display: flex;
   justify-content: center;
+}
+
+.key{
+  transition: .3s;
+}
+
+.key:hover{
+  transform: scale(1.1) rotate(24deg);
 }
 
 .chosen {
